syntax = "proto3";

package user;

option go_package = "./adapter/pkg/user/pb";

import "google/protobuf/Empty.proto";
import "google/protobuf/Timestamp.proto";

service UserService {
  rpc FindAll(google.protobuf.Empty) returns (ListUserResponse);
  rpc FindById(FindByIdRequest) returns (GetUserResponse);
  rpc FindByEmail(FindByEmailRequest) returns (GetUserResponse);
  rpc Create(CreateRequest) returns (GetUserResponse);
  rpc Update(UpdateRequest) returns (GetUserResponse);
  rpc Delete(FindByIdRequest) returns (google.protobuf.Empty);
}

message User {
  int64 IdUser = 1;
  int32 Role = 2;
  string Name = 3;
  string Email = 4;
  string Address = 5;
  string Phone = 6;
  string Password = 7;
  google.protobuf.Timestamp CreatedAt = 8;
  google.protobuf.Timestamp UpdatedAt = 9;
  repeated Notification notification = 10;
  repeated Payment payment = 11;
}

message ListUserResponse {
  repeated User user = 1;
}

message GetUserResponse {
  User user = 1;
}

message FindByIdRequest {
  int64 Id = 1;
}

message FindByEmailRequest {
  string Email = 1;
  string Password = 2;
}

message CreateRequest {
  string Name = 2;
  string Email = 3;
  string Address = 4;
  string Phone = 5;
  string Password = 6;
}

message UpdateRequest {
  int64 IdUser = 1;
  int32 Role = 2;
  string Name = 3;
  string Email = 4;
  string Address = 5;
  string Phone = 6;
  string Password = 7;
}

// Other Proto
message Notification {
  int64 IdNotification = 1;
  int64 UserId = 2;
  string Title = 3;
  string Description = 4;
  string URL = 5;
  bool IsRead = 6;
  google.protobuf.Timestamp CreatedAt = 7;
  User user = 8;
}

message UserOrder {
  int64 IdOrder = 1;
  int64 PayloadId = 2;
  string Code = 3;
  string Name = 4;
  int64 Price = 5;
  string Image = 6;
  int32 Quantity = 7;
  int64 TotalPriceItem = 8;
  Payment payment = 9;
}

message Payment {
  int64 IdPayload = 1;
  int64 UserId = 2;
  string OrderId = 3;
  string TransactionTime = 4;
  string TransactionStatus = 5;
  string TransactionId = 6;
  string StatusCode = 7;
  string SignatureKey = 8;
  string SettlementTime = 9;
  string PaymentType = 10;
  string MerchantId = 11;
  string GrossAmount = 12;
  string FraudStatus = 13;
  string BankType = 14;
  string VANumber = 15;
  string BillerCode = 16;
  string BillKey = 17;
  string ReceiptNumber = 18;
  string Address = 19;
  string Courier = 20;
  string CourierService = 21;
  User user = 22;
  repeated UserOrder user_order = 23;
}